# game_summer_22

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  common.h  main.c  main.cpp
src/vk/: device.c  vk.h
src/window/x11/: x11.c  x11.h
src/x11/: x11.c  x11.h
